--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ tqdm==4.67.0
 requests==2.32.3
 prettytable==3.12.0
 pytest==8.3.3
+scikit-learn==1.6.1
 --extra-index-url https://download.pytorch.org/whl/cu126
 torch
 torchvision
